force-app/main/default/objects/Account/fields/Active_Auto_Policy__c.field-meta.xml
<CustomField>
    <fullName>Active_Auto_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Auto Policy</label>
    <type>Checkbox</type>
</CustomField>