force-app/main/default/objects/Account/fields/Active_Home_Policy__c.field-meta.xml
<CustomField>
    <fullName>Active_Home_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Home Policy</label>
    <type>Checkbox</type>
</CustomField>