force-app/main/default/objects/Account/fields/Auto_Policy_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Auto_Policy_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Policy Recommendation</label>
    <type>Checkbox</type>
</CustomField>