force-app/main/default/objects/Account/fields/High_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>High_End_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High-End Customer</label>
    <type>Checkbox</type>
</CustomField>