force-app/main/default/objects/Account/fields/NBA_Billing_check__c.field-meta.xml
<CustomField>
    <fullName>NBA_Billing_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NBA Billing check</label>
    <type>Checkbox</type>
</CustomField>