force-app/main/default/objects/Account/fields/New_Customer__c.field-meta.xml
<CustomField>
    <fullName>New_Customer__c</fullName>
    <formula>IF((TODAY() - DATEVALUE(CreatedDate)) &lt; 60, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Customer</label>
    <type>Checkbox</type>
</CustomField>