force-app/main/default/objects/Account/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>SUBSTITUTE( Phone ,&apos;+&apos;, &apos;&apos;)</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>