force-app/main/default/objects/Account/fields/Retention_Risk__c.field-meta.xml
<CustomField>
    <fullName>Retention_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retention Risk</label>
    <type>Checkbox</type>
</CustomField>