force-app/main/default/objects/Account/fields/RSI_Driver_Lisense_ID__c.field-meta.xml
<CustomField>
    <fullName>RSI_Driver_Lisense_ID__c</fullName>
    <label>Driver&apos;s Lisense ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>