force-app/main/default/objects/Account/fields/RSI_Language__c.field-meta.xml
<CustomField>
    <fullName>RSI_Language__c</fullName>
    <label>Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>