force-app/main/default/objects/Account/fields/RSI_Military__c.field-meta.xml
<CustomField>
    <fullName>RSI_Military__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Military</label>
    <type>Checkbox</type>
</CustomField>