force-app/main/default/objects/Account/fields/RSI_Opt_In_To_Paperless_Delivery__c.field-meta.xml
<CustomField>
    <fullName>RSI_Opt_In_To_Paperless_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt-In To Paperless Delivery</label>
    <type>Checkbox</type>
</CustomField>