force-app/main/default/objects/Account/fields/RSI_Preferred_Channel_To_Communicate__c.field-meta.xml
<CustomField>
    <fullName>RSI_Preferred_Channel_To_Communicate__c</fullName>
    <label>Preferred Channel To Communicate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>