force-app/main/default/objects/Account/fields/RSI_Reason_to_update_insurance_agent__c.field-meta.xml
<CustomField>
    <fullName>RSI_Reason_to_update_insurance_agent__c</fullName>
    <label>Reason to update insurance agent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>