force-app/main/default/objects/Account/fields/Service_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Service_Recovery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Recovery</label>
    <type>Checkbox</type>
</CustomField>