force-app/main/default/objects/Account/validationRules/Reason_to_update_Insurance_Agent.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_to_update_Insurance_Agent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR($Profile.Name=&apos;Read Only Insurance Agent&apos;,$Profile.Name=&apos;Read Only Agent&apos;,$Profile.Name=&apos;Read Only Supervisor&apos;),
ISCHANGED(RSI_Insurance_Agent__c),OR(ISBLANK(RSI_Reason_to_update_insurance_agent__c),!ISCHANGED(RSI_Reason_to_update_insurance_agent__c)))</errorConditionFormula>
    <errorMessage>Please provide reason of updating insurance agent.</errorMessage>
</ValidationRule>